# nba_elt_rest_api

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  config.yaml  metrics-server-deployment.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/: labeler.yml  pull_request_template.md
.github/scripts/: auto_label.py  locust_load_test.py
.github/workflows/: auto_labeler.yml  ci_cd.yaml  deploy.yaml  deploy.yml  discord_notification.yaml  discord_notification.yml  slack_notification.yaml  slack_notification.yml  test.yaml  test.yml
docker/: Dockerfile  Dockerfile.test  docker-compose-deploy.yml  docker-compose-local.yml  docker-compose-postgres.yml  docker-compose-test.yml  docker-compose.yml  install_packages.sh  postgres_bootstrap.sql
helm/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
helm/examples/: rendered-dev.yaml  rendered-prod.yaml
helm/manual/: config_map.yaml  deployment-hpa.yaml  secrets.yaml  service.yaml  service_account.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/: apuntes.md  deployment-hpa.yaml  deployment.yaml  metrics-server-deployment.yaml  secrets.yaml  service.yaml
prometheus/: prometheus.yml
src/: admin_tasks.py  cache.py  crud.py  database.py  dependencies.py  file_helpers.py  logger.py  logging.py  main.py  middleware.py  models.py  reporting.py  schemas.py  security.py  server.py  utils.py
src/crud/: feature_flags.py  feedback.py  game_types.py  incidents.py  injuries.py  player_stats.py  predictions.py  reddit_comments.py  reporting.py  schedule.py  settings.py  standings.py  team_event_context.py  team_ratings.py  transactions.py  twitter_comments.py  users.py
src/dao/: bets.py  feature_flags.py  feedback.py  game_types.py  incidents.py  injuries.py  player_stats.py  predictions.py  reddit_comments.py  reporting.py  schedule.py  settings.py  standings.py  team_event_context.py  team_ratings.py  transactions.py  twitter_comments.py  users.py
src/models/: feature_flags.py  feedback.py  game_types.py  incidents.py  injuries.py  player_stats.py  predictions.py  reddit_comments.py  reporting.py  schedule.py  standings.py  team_event_context.py  team_ratings.py  transactions.py  twitter_comments.py  users.py
src/routers/: admin.py  admin_feedback.py  auth.py  bets.py  feature_flags.py  feedback.py  game_types.py  gmail_auth.py  health.py  help_page.py  incidents.py  injuries.py  login.py  past_bets.py  player_stats.py  predictions.py  reddit_comments.py  reporting.py  reset_password.py  schedule.py  scorers.py  settings.py  standings.py  team_events.py  team_ratings.py  transactions.py  twitter_comments.py  users.py
src/routers/pages/: __init__.py  admin.py  bets.py  feedback.py  login.py  settings.py  team_events.py
src/routers/v1/: __init__.py  admin.py  bets.py  feature_flags.py  feedback.py  game_types.py  gmail_auth.py  incidents.py  injuries.py  login.py  ml_predict_fake.py  past_bets.py  player_stats.py  predictions.py  reddit_comments.py  reporting.py  reset_password.py  schedule.py  settings.py  standings.py  team_events.py  team_ratings.py  transactions.py  twitter_comments.py  users.py
static/: 404.html  base.html  bets.html  create_user.html  index.html  style.css  styles.css  user_login.html  user_page.html  users.html
templates/: 404.html  admin.html  admin_feedback.html  base.html  bets.html  create_user.html  feature_flags.html  feedback.html  help.html  help.md  help_page.html  incidents.html  index.html  login.html  old_bets.html  past_bets.html  reporting.html  scheduled_reporting_tbd.html  settings.html  team_events.html  team_events_old.html  test.html  user_login.html  user_page.html
tests/: conftest.py  test_endpoints.py  test_scripts.py
tests/fixtures/: config.yaml  game_types.json  injuries.json  injuries_team.json  reddit_comments.json  scorers.json  standings.json  team_ratings.json  team_ratings_team.json  twitter_comments.json
tests/integration/: admin_feedback_test.py  admin_tasks_page_test.py  admin_test.py  bets_test.py  cache_test.py  feature_flags_test.py  feedback_test.py  game_types_test.py  gmail_auth_test.py  health_test.py  help_page_test.py  home_test.py  incidents_test.py  injuries_test.py  login_test.py  logout_test.py  ml_housing_predict_test.py  past_bets_test.py  player_stats_test.py  predictions_test.py  reddit_test.py  run_query_test.py  schedule_test.py  scorers_test.py  settings_test.py  standings_test.py  team_events_test.py  team_ratings_test.py  transactions_test.py  twitter_test.py  user_test.py
tests/unit/: admin_tasks_test.py  api_auth_test.py  cache_key_builder_test.py  check_creds_test.py  csv_test.py  hash_password_test.py  jwt_access_token_test.py  salt_test.py  security_test.py  yaml_test.py
