[tool.poetry]
name = "nba-elt-rest-api"
version = "1.7.5"
description = "REST API Project"
authors = ["jyablonski9 <jyablonski9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
sqlalchemy = "^2.0.21"
pydantic = "^2.4.2"
psycopg2-binary = "^2.9.8"
mangum = "^0.17.0"
jinja2 = "^3.1.2"
opentelemetry-instrumentation-fastapi = "^0.41b0"
opentelemetry-instrumentation-requests = "^0.41b0"
opentelemetry-instrumentation-sqlalchemy = "^0.41b0"
opentelemetry-exporter-otlp = "^1.20.0"
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
protobuf = "^4.24.3"
python-jose = "^3.3.0"
pyyaml = "^6.0.1"
fastapi-cache2 = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
coveralls = "^3.3.1"
prometheus-fastapi-instrumentator = "^6.1.0"
ruff = "^0.1.2"
types-pyyaml = "^6.0.12.12"
sqlalchemy-stubs = "^0.4"
types-python-jose = "^3.3.4.8"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.local_dev.dependencies]
ipykernel = "^6.25.2"
mypy = "^1.7.0"

[tool.mypy]
files = ["."]
plugins = "sqlmypy"

[[tool.mypy.overrides]]
module = [
    "src/database.py",
    "secondmodule",
    "utils",
    "config",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"